--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,7 @@ dependencies {
     implementation "org.springframework.ai:spring-ai-pgvector-store:$springAiVersion"
     implementation "org.springframework.ai:spring-ai-advisors-vector-store:$springAiVersion"
     implementation "org.springframework.ai:spring-ai-rag:$springAiVersion"
+    implementation "org.springframework.ai:spring-ai-starter-model-chat-memory-repository-jdbc:$springAiVersion"
 
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
     implementation 'io.micrometer:micrometer-registry-prometheus'
