--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,6 +16,7 @@ trainings.blacklist=jmix-introduction_EN.adoc
 
 spring.ai.openai.api-key=${OPENAI_API_KEY}
 spring.ai.openai.embedding.options.model=text-embedding-3-small
+spring.ai.chat.memory.repository.jdbc.initialize-schema=always
 
 management.endpoints.web.exposure.include=*
 management.endpoint.health.show-details=always
