--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+spring.profiles.active=dev
+
 server.port=8081
 
 docs.base-url=https://docs.jmix.io/jmix
@@ -9,10 +11,12 @@ uisamples.doc-path=doc
 uisamples.sample-path=sample
 uisamples.limit=0
 
-trainings.git-url=https://git.haulmont.com/platform/trainings/jmix-flowui-trainings.git
+trainings.local-path=.jmix/work/jmix-flowui-trainings
 trainings.limit=0
 trainings.whitelist=01 Basic courses,02 Advanced courses,03 Additional courses
 trainings.blacklist=jmix-introduction_EN.adoc
+
+reranker.url=http://localhost:8000/rerank
 
 spring.ai.openai.api-key=${OPENAI_API_KEY}
 spring.ai.openai.embedding.options.model=text-embedding-3-small
@@ -39,9 +43,6 @@ jmix.ui.login-view-id=LoginView
 jmix.ui.main-view-id=MainView
 jmix.ui.menu-config=io/jmix/ai/backend/menu.xml
 jmix.ui.composite-menu=true
-
-ui.login.defaultUsername=admin
-ui.login.defaultPassword=admin
 
 jmix.core.available-locales=en
 
