--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,6 +18,9 @@ trainings.blacklist=jmix-introduction_EN.adoc
 
 reranker.url=http://localhost:8000/rerank
 
+answer-checks.rouge.url=http://localhost:8001/rouge
+answer-checks.bert.url=http://localhost:8001/bert
+
 spring.ai.openai.api-key=${OPENAI_API_KEY}
 spring.ai.openai.embedding.options.model=text-embedding-3-small
 spring.ai.chat.memory.repository.jdbc.initialize-schema=always
@@ -33,6 +36,8 @@ main.datasource.password=root
 
 main.liquibase.change-log=io/jmix/ai/backend/liquibase/changelog.xml
 
+main.datasource.studio.liquibase.exclude-prefixes=spring_ai_
+
 jmix.core.additional-stores=pgvector
 
 pgvector.datasource.url=jdbc:postgresql://localhost:5433/postgres
@@ -42,7 +47,7 @@ pgvector.datasource.password=postgres
 jmix.ui.login-view-id=LoginView
 jmix.ui.main-view-id=MainView
 jmix.ui.menu-config=io/jmix/ai/backend/menu.xml
-jmix.ui.composite-menu=true
+jmix.ui.composite-menu=false
 
 jmix.core.available-locales=en
 
