Fix answer_checks prod URL

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -11,3 +11,6 @@ pgvector.datasource.username=postgres
 pgvector.datasource.password=postgres
 
 reranker.url=http://reranker:8000/rerank
+
+answer-checks.rouge.url=http://answer_checks:8001/rouge
+answer-checks.bert.url=http://answer_checks:8001/bert
