--- a/src/main/resources/io/jmix/ai/backend/init/default-params.yml
+++ b/src/main/resources/io/jmix/ai/backend/init/default-params.yml
@@ -1,8 +1,8 @@
-description: gpt-4.1, 2025-07-16 13:27
+description: gpt-5
 
 model:
-  name: gpt-4.1
-  temperature: 1.0
+  name: gpt-5
+  reasoningEffort: low
 
 tools:
   documentation_retriever:
