--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,6 +25,8 @@ spring.ai.openai.api-key=${OPENAI_API_KEY}
 spring.ai.openai.embedding.options.model=text-embedding-3-small
 spring.ai.chat.memory.repository.jdbc.initialize-schema=always
 
+chat.api.max-request-length=50000
+
 management.endpoints.web.exposure.include=*
 management.endpoint.health.show-details=always
 management.endpoint.prometheus.enabled=true
