--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,7 +16,7 @@ trainings.limit=0
 trainings.whitelist=01 Basic courses,02 Advanced courses,03 Additional courses
 trainings.blacklist=jmix-introduction_EN.adoc
 
-reranker.url=http://localhost:7999/rerank
+reranker.url=http://localhost:8000/rerank
 
 answer-checks.rouge.url=http://localhost:8001/rouge
 answer-checks.bert.url=http://localhost:8001/bert
@@ -32,9 +32,9 @@ management.endpoint.health.show-details=always
 management.endpoint.prometheus.enabled=true
 management.otlp.logging.endpoint=http://localhost:4318/v1/logs
 
-main.datasource.url=jdbc:postgresql://localhost:5432/aijmix
-main.datasource.username=aijmix
-main.datasource.password=aijmix
+main.datasource.url=jdbc:postgresql://localhost/postgres
+main.datasource.username=postgres
+main.datasource.password=postgres
 
 main.liquibase.change-log=io/jmix/ai/backend/liquibase/changelog.xml
 
@@ -42,9 +42,9 @@ main.datasource.studio.liquibase.exclude-prefixes=spring_ai_
 
 jmix.core.additional-stores=pgvector
 
-pgvector.datasource.url=jdbc:postgresql://localhost:5432/aijmix
-pgvector.datasource.username=aijmix
-pgvector.datasource.password=aijmix
+pgvector.datasource.url=jdbc:postgresql://localhost:5432/postgres
+pgvector.datasource.username=postgres
+pgvector.datasource.password=postgres
 
 jmix.ui.login-view-id=LoginView
 jmix.ui.main-view-id=MainView
