--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -32,9 +32,9 @@ management.endpoint.health.show-details=always
 management.endpoint.prometheus.enabled=true
 management.otlp.logging.endpoint=http://localhost:4318/v1/logs
 
-main.datasource.url=jdbc:postgresql://localhost/postgres
-main.datasource.username=postgres
-main.datasource.password=postgres
+main.datasource.url=jdbc:postgresql://localhost/jmix-ai-backend
+main.datasource.username=root
+main.datasource.password=root
 
 main.liquibase.change-log=io/jmix/ai/backend/liquibase/changelog.xml
 
@@ -42,7 +42,7 @@ main.datasource.studio.liquibase.exclude-prefixes=spring_ai_
 
 jmix.core.additional-stores=pgvector
 
-pgvector.datasource.url=jdbc:postgresql://localhost:5432/postgres
+pgvector.datasource.url=jdbc:postgresql://localhost:5433/postgres
 pgvector.datasource.username=postgres
 pgvector.datasource.password=postgres
 
