--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,2 +1,10 @@
 ui.login.defaultUsername=admin
 ui.login.defaultPassword=admin
+
+main.datasource.url=jdbc:postgresql://localhost:5432/jmix-ai-backend
+main.datasource.username=postgres
+main.datasource.password=postgres
+
+pgvector.datasource.url=jdbc:postgresql://localhost:5433/vectorstore
+pgvector.datasource.username=postgres
+pgvector.datasource.password=postgres
