--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,4 +1,4 @@
-# Host names are set in docker-compose.yml files
+# This configuration is used for production deployment
 
 management.otlp.logging.endpoint=http://otel-collector:4318/v1/logs
 
