--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,10 +1,12 @@
+# This configuration is used for local development with services provided by /docker-compose.yml
+
 ui.login.defaultUsername=admin
 ui.login.defaultPassword=admin
 
-main.datasource.url=jdbc:postgresql://localhost:5432/jmix-ai-backend
+main.datasource.url=jdbc:postgresql://localhost:15432/jmix-ai-backend
 main.datasource.username=postgres
 main.datasource.password=postgres
 
-pgvector.datasource.url=jdbc:postgresql://localhost:5433/vectorstore
+pgvector.datasource.url=jdbc:postgresql://localhost:15433/vectorstore
 pgvector.datasource.username=postgres
 pgvector.datasource.password=postgres
