--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 # Minimal development environment for Jmix AI Backend application
 services:
-  jmix-ai-postgres-main:
+  postgres:
     image: postgres:16
     environment:
       POSTGRES_DB: jmix-ai-backend
@@ -9,7 +9,7 @@ services:
     ports:
       - "15432:5432"
     volumes:
-      - jmix-ai-main-data:/var/lib/postgresql/data
+      - postgres-data:/var/lib/postgresql/data
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U postgres -d jmix-ai-backend"]
       interval: 10s
@@ -17,7 +17,7 @@ services:
       retries: 10
     restart: unless-stopped
 
-  jmix-ai-postgres-vector:
+  pgvector:
     image: pgvector/pgvector:pg16
     environment:
       POSTGRES_DB: vectorstore
@@ -26,7 +26,7 @@ services:
     ports:
       - "15433:5432"
     volumes:
-      - jmix-ai-vector-data:/var/lib/postgresql/data
+      - pgvector-data:/var/lib/postgresql/data
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U postgres -d vectorstore"]
       interval: 10s
@@ -34,11 +34,11 @@ services:
       retries: 10
     restart: unless-stopped
 
-  jmix-ai-reranker:
+  reranker:
     build:
       context: ./reranker
       dockerfile: Dockerfile
-    image: mcp-reranker:latest
+    image: jmix-ai-reranker:latest
     ports:
       - "8000:8000"
     restart: unless-stopped
@@ -81,5 +81,5 @@ services:
     restart: unless-stopped
 
 volumes:
-  jmix-ai-main-data:
-  jmix-ai-vector-data:
+  postgres-data:
+  pgvector-data:
