Replace ROUGE and BERT scores with semantic score

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -12,5 +12,5 @@ pgvector.datasource.password=postgres
 
 reranker.url=http://reranker:8000/rerank
 
-answer-checks.rouge.url=http://answer_checks:8001/rouge
-answer-checks.bert.url=http://answer_checks:8001/bert
+answer-checks.model=gpt-5-mini
+answer-checks.temperature=0
