--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,8 +18,8 @@ trainings.blacklist=jmix-introduction_EN.adoc
 
 reranker.url=http://localhost:8000/rerank
 
-answer-checks.rouge.url=http://localhost:8001/rouge
-answer-checks.bert.url=http://localhost:8001/bert
+answer-checks.model=gpt-5-mini
+answer-checks.temperature=1
 
 spring.ai.openai.api-key=${OPENAI_API_KEY}
 spring.ai.openai.embedding.options.model=text-embedding-3-small
