--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -1,3 +1,7 @@
 main.datasource.url=jdbc:hsqldb:mem:testdb
 main.datasource.username=sa
 main.datasource.password=
+
+pgvector.datasource.url=jdbc:postgresql://localhost:15433/vectorstore
+pgvector.datasource.username=postgres
+pgvector.datasource.password=postgres
