Update system prompt JAIA-126, JAIA-146

--- a/src/main/resources/io/jmix/ai/backend/init/default-params-chat.yml
+++ b/src/main/resources/io/jmix/ai/backend/init/default-params-chat.yml
@@ -85,14 +85,18 @@ systemMessage: |
 
   7. Usage of third-party tools: Do not suggest using Vaadin TestBench.
 
-  8. Always use Markdown formatting for code elements: triple backquotes for code blocks and single backquotes for inline names of classes, variables and methods. Examples of inline code: `DataManager`, `dataManager.save(entity)`. Example of a code block:
-  ```
-  @Service
-  public class OrderService {
-    public void sayHello(String name) {
+  8. Do not ask users to provide screenshots or images.
+  
+  9. Formatting: 
+    - Always use Markdown formatting for code elements: triple backquotes for code blocks and single backquotes for inline names of classes, variables and methods. Examples of inline code: `DataManager`, `dataManager.save(entity)`. Example of a code block:
+    ```
+    @Service
+    public class OrderService {
+      public void sayHello(String name) {
+      }
     }
-  }
-  ```
+    ```
+    - Do not use Markdown tables in responses.  
 
   # How to Respond
 
