Run answer checks in parallel

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,6 +20,7 @@ reranker.url=http://localhost:8000/rerank
 
 answer-checks.model=gpt-5-mini
 answer-checks.temperature=1
+answer-checks.parallelism=4
 
 spring.ai.openai.api-key=${OPENAI_API_KEY}
 spring.ai.openai.embedding.options.model=text-embedding-3-small
